--- a/templates/graficos.html
+++ b/templates/graficos.html
@@ -25,16 +25,38 @@
 <div id="graficos-container">
     <!-- Gráfico 1 -->
     <div class="grafico" id="grafico1" style="display: none;">
-        <script type="module" src="https://us-east-1.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js"></script>
-        <tableau-viz 
-            id="tableau-viz" 
-            src="https://us-east-1.online.tableau.com/t/angelicaat1-6b3980f0b3/views/grafico1/grafico1" 
-            width="1536" 
-            height="698" 
-            hide-tabs 
-            toolbar="bottom">
-        </tableau-viz>
-    </div>
+  <div class='tableauPlaceholder' id='viz1757353532266' style='position: relative'>
+    <noscript>
+      <a href='#'>
+        <img alt='Gráfico 1' 
+             src='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico1/1_rss.png' 
+             style='border: none' />
+      </a>
+    </noscript>
+    <object class='tableauViz' style='display:none;'>
+      <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+      <param name='embed_code_version' value='3' />
+      <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico1' />
+      <param name='tabs' value='no' />
+      <param name='toolbar' value='yes' />
+      <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico1/1.png' />
+      <param name='animate_transition' value='yes' />
+      <param name='display_spinner' value='yes' />
+      <param name='display_overlay' value='yes' />
+      <param name='display_count' value='yes' />
+      <param name='language' value='es-ES' />
+    </object>
+  </div>
+  <script type='text/javascript'>
+    var divElement = document.getElementById('viz1757353532266');
+    var vizElement = divElement.getElementsByTagName('object')[0];
+    vizElement.style.width = '100%';
+    vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+    var scriptElement = document.createElement('script');
+    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+    vizElement.parentNode.insertBefore(scriptElement, vizElement);
+  </script>
+</div>
 
     <!-- Gráfico 2 -->
     <div class="grafico" id="grafico2" style="display: none;">
@@ -172,3 +194,4 @@
 </script>
 
 {% endblock %}
+
