--- a/templates/graficos.html
+++ b/templates/graficos.html
@@ -23,8 +23,8 @@ const contenedor = document.getElementById('grafico-container');
 
 // URLs de los gráficos
 const graficosURLs = {
-    "grafico1": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico1",
-    "grafico2": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico2",
+    "grafico1": "https://public.tableau.com/shared/6BQWHKWMP?:display_count=n&:origin=viz_share_link",
+    "grafico2": "https://public.tableau.com/shared/QWKRHW9RP?:display_count=n&:origin=viz_share_link",
     "grafico3": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico3",
     "grafico4": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico4",
     "grafico5": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico5",
@@ -68,6 +68,7 @@ graficoSelector.addEventListener("change", () => {
 </script>
 
 {% endblock %}
+
 
 
 
