--- a/templates/graficos.html
+++ b/templates/graficos.html
@@ -2,64 +2,41 @@
 {% block content %}
 <h1>Gráficos Interactivos</h1>
 
-<p>En esta pestaña, se visualizarán gráficos interactivos basados en los datos abiertos seleccionados sobre los indicadores de la calidad del agua.</p>
+<p>Aquí se muestra el gráfico 1 de Tableau Public:</p>
 
-<label for="grafico-selector">Selecciona un gráfico:</label>
-<select id="grafico-selector">
-    {% for i in range(1,11) %}
-    <option value="grafico{{ i }}">Gráfico {{ i }}</option>
-    {% endfor %}
-</select>
-
-<!-- Contenedor principal para el gráfico -->
-<div id="grafico-container" style="width:100%; height:700px;"></div>
-
-<!-- Script de Tableau (solo una vez) -->
-<script type="text/javascript" src="https://public.tableau.com/javascripts/api/viz_v1.js"></script>
-
-<script>
-const graficoSelector = document.getElementById('grafico-selector');
-const contenedor = document.getElementById('grafico-container');
-
-// URLs de los gráficos (embed code)
-const graficosURLs = {
-    "grafico1": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico1?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico2": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico2?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico3": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico3?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico4": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico4?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico5": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico5?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico6": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico6?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico7": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico7?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico8": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico8?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico9": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico9?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico10": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico10?:embed=y&:showVizHome=no&:display_count=n"
-};
-
-let currentViz = null;
-
-// Función para cargar el gráfico seleccionado
-function cargarGrafico(graficoKey) {
-    if(currentViz) currentViz.dispose(); // Elimina el gráfico anterior
-
-    currentViz = new tableau.Viz(contenedor, graficosURLs[graficoKey], {
-        width: "100%",
-        height: "700px",
-        hideTabs: true,
-        hideToolbar: false
-    });
-}
-
-// Inicializar primer gráfico
-cargarGrafico("grafico1");
-graficoSelector.value = "grafico1";
-
-// Cambiar gráfico al seleccionar
-graficoSelector.addEventListener("change", () => {
-    cargarGrafico(graficoSelector.value);
-});
+<!-- Gráfico 1 -->
+<div class='tableauPlaceholder' id='viz1757366027039' style='position: relative'>
+  <noscript>
+    <a href='#'>
+      <img alt=' ' src='https://public.tableau.com/static/images/ZG/ZGDCG485N/1_rss.png' style='border: none' />
+    </a>
+  </noscript>
+  <object class='tableauViz' style='display:none;'>
+    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+    <param name='embed_code_version' value='3' />
+    <param name='path' value='shared/ZGDCG485N' />
+    <param name='toolbar' value='yes' />
+    <param name='static_image' value='https://public.tableau.com/static/images/ZG/ZGDCG485N/1.png' />
+    <param name='animate_transition' value='yes' />
+    <param name='display_static_image' value='yes' />
+    <param name='display_spinner' value='yes' />
+    <param name='display_overlay' value='yes' />
+    <param name='display_count' value='yes' />
+    <param name='language' value='es-ES' />
+  </object>
+</div>
+<script type='text/javascript'>
+  var divElement = document.getElementById('viz1757366027039');
+  var vizElement = divElement.getElementsByTagName('object')[0];
+  vizElement.style.width='100%';
+  vizElement.style.height=(divElement.offsetWidth*0.75)+'px';
+  var scriptElement = document.createElement('script');
+  scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+  vizElement.parentNode.insertBefore(scriptElement, vizElement);
 </script>
 
 {% endblock %}
+
 
 
 
