--- a/templates/graficos.html
+++ b/templates/graficos.html
@@ -2,69 +2,132 @@
 {% block content %}
 <h1>Gráficos Interactivos</h1>
 
+<!-- Descripción de la pestaña -->
 <p>En esta pestaña, se visualizarán gráficos interactivos basados en los datos abiertos seleccionados sobre los indicadores de la calidad del agua.</p>
+<p>Estos gráficos permitirán realizar un análisis y evaluación de la toma de decisiones, así como promover la mejora continua frente a posibles problemas relacionados con la calidad del agua. 
+Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad y tomar decisiones informadas para mejorar la gestión de los recursos hídricos.</p>
 
+<!-- Menú desplegable para seleccionar gráfico -->
 <label for="grafico-selector">Selecciona un gráfico:</label>
 <select id="grafico-selector">
-    {% for i in range(1,11) %}
-    <option value="grafico{{ i }}">Gráfico {{ i }}</option>
-    {% endfor %}
+    <option value="grafico1">Gráfico 1</option>
+    <option value="grafico2">Gráfico 2</option>
+    <option value="grafico3">Gráfico 3</option>
+    <option value="grafico4">Gráfico 4</option>
+    <option value="grafico5">Gráfico 5</option>
+    <option value="grafico6">Gráfico 6</option>
+    <option value="grafico7">Gráfico 7</option>
+    <option value="grafico8">Gráfico 8</option>
+    <option value="grafico9">Gráfico 9</option>
+    <option value="grafico10">Gráfico 10</option>
 </select>
 
-<!-- Contenedor principal para el gráfico -->
-<div id="grafico-container" style="width:100%; height:700px;"></div>
+<!-- Contenedores de los gráficos -->
+<div id="graficos-container">
 
-<!-- Script de Tableau (solo una vez) -->
-<script type="text/javascript" src="https://public.tableau.com/javascripts/api/viz_v1.js"></script>
+    <!-- Gráfico 1 -->
+    <div class="grafico" id="grafico1" style="display: none;">
+        <div class='tableauPlaceholder' id='viz1757367034143' style='position: relative'>
+            <noscript>
+                <a href='#'>
+                    <img alt=' ' src='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico1/1_rss.png' style='border: none' />
+                </a>
+            </noscript>
+            <object class='tableauViz' style='display:none;'>
+                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                <param name='embed_code_version' value='3' />
+                <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico1' />
+                <param name='tabs' value='no' />
+                <param name='toolbar' value='yes' />
+                <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico1/1.png' />
+                <param name='animate_transition' value='yes' />
+                <param name='display_static_image' value='yes' />
+                <param name='display_spinner' value='yes' />
+                <param name='display_overlay' value='yes' />
+                <param name='display_count' value='yes' />
+                <param name='language' value='es-ES' />
+            </object>
+        </div>
+    </div>
+
+    <!-- Gráfico 2 -->
+    <div class="grafico" id="grafico2" style="display: none;">
+        <div class='tableauPlaceholder' id='viz1757367395808' style='position: relative'>
+            <noscript>
+                <a href='#'>
+                    <img alt=' ' src='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico2/1_rss.png' style='border: none' />
+                </a>
+            </noscript>
+            <object class='tableauViz' style='display:none;'>
+                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                <param name='embed_code_version' value='3' />
+                <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico2' />
+                <param name='tabs' value='no' />
+                <param name='toolbar' value='yes' />
+                <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico2/1.png' />
+                <param name='animate_transition' value='yes' />
+                <param name='display_static_image' value='yes' />
+                <param name='display_spinner' value='yes' />
+                <param name='display_overlay' value='yes' />
+                <param name='display_count' value='yes' />
+                <param name='language' value='es-ES' />
+            </object>
+        </div>
+    </div>
+
+    <!-- Gráfico 3 -->
+    <div class="grafico" id="grafico3" style="display: none;">
+        <div class='tableauPlaceholder' id='viz1757367434316' style='position: relative'>
+            <noscript>
+                <a href='#'>
+                    <img alt=' ' src='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico3/1_rss.png' style='border: none' />
+                </a>
+            </noscript>
+            <object class='tableauViz' style='display:none;'>
+                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                <param name='embed_code_version' value='3' />
+                <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico3' />
+                <param name='tabs' value='no' />
+                <param name='toolbar' value='yes' />
+                <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico3/1.png' />
+                <param name='animate_transition' value='yes' />
+                <param name='display_static_image' value='yes' />
+                <param name='display_spinner' value='yes' />
+                <param name='display_overlay' value='yes' />
+                <param name='display_count' value='yes' />
+                <param name='language' value='es-ES' />
+            </object>
+        </div>
+    </div>
+
+    <!-- Pendientes de integrar -->
+    <div class="grafico" id="grafico4" style="display: none;"></div>
+    <div class="grafico" id="grafico5" style="display: none;"></div>
+    <div class="grafico" id="grafico6" style="display: none;"></div>
+    <div class="grafico" id="grafico7" style="display: none;"></div>
+    <div class="grafico" id="grafico8" style="display: none;"></div>
+    <div class="grafico" id="grafico9" style="display: none;"></div>
+    <div class="grafico" id="grafico10" style="display: none;"></div>
+</div>
+
+<!-- Script de Tableau -->
+<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script>
 
 <script>
-const graficoSelector = document.getElementById('grafico-selector');
-const contenedor = document.getElementById('grafico-container');
+    // JavaScript para manejar la visibilidad de los gráficos
+    const graficoSelector = document.getElementById('grafico-selector');
+    const graficos = document.querySelectorAll('.grafico');
 
-// URLs de los gráficos (embed code)
-const graficosURLs = {
-    "grafico1": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico1?:language=es-ES&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link",
-    "grafico2": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico2?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico3": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico3?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico4": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico4?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico5": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico5?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico6": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico6?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico7": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico7?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico8": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico8?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico9": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico9?:embed=y&:showVizHome=no&:display_count=n",
-    "grafico10": "https://public.tableau.com/views/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico10?:embed=y&:showVizHome=no&:display_count=n"
-};
-
-let currentViz = null;
-
-// Función para cargar el gráfico seleccionado
-function cargarGrafico(graficoKey) {
-    if(currentViz) currentViz.dispose(); // Elimina el gráfico anterior
-
-    currentViz = new tableau.Viz(contenedor, graficosURLs[graficoKey], {
-        width: "100%",
-        height: "700px",
-        hideTabs: true,
-        hideToolbar: false
+    graficoSelector.addEventListener('change', () => {
+        const selectedGrafico = graficoSelector.value;
+        graficos.forEach(grafico => {
+            grafico.style.display = grafico.id === selectedGrafico ? 'block' : 'none';
+        });
     });
-}
 
-// Inicializar primer gráfico
-cargarGrafico("grafico1");
-graficoSelector.value = "grafico1";
-
-// Cambiar gráfico al seleccionar
-graficoSelector.addEventListener("change", () => {
-    cargarGrafico(graficoSelector.value);
-});
+    // Mostrar el primer gráfico por defecto
+    graficoSelector.value = 'grafico1';
+    document.getElementById('grafico1').style.display = 'block';
 </script>
 
 {% endblock %}
-
-
-
-
-
-
-
-
