--- a/templates/graficos.html
+++ b/templates/graficos.html
@@ -33,7 +33,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
                     <img alt=' ' src='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico1/1_rss.png' style='border: none' />
                 </a>
             </noscript>
-            <object class='tableauViz' style='display:none;'>
+            <object class='tableauViz'>
                 <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
                 <param name='embed_code_version' value='3' />
                 <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico1' />
@@ -58,7 +58,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
                     <img alt=' ' src='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico2/1_rss.png' style='border: none' />
                 </a>
             </noscript>
-            <object class='tableauViz' style='display:none;'>
+            <object class='tableauViz'>
                 <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
                 <param name='embed_code_version' value='3' />
                 <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico2' />
@@ -83,7 +83,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
                     <img alt=' ' src='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico3/1_rss.png' style='border: none' />
                 </a>
             </noscript>
-            <object class='tableauViz' style='display:none;'>
+            <object class='tableauViz'>
                 <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
                 <param name='embed_code_version' value='3' />
                 <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico3' />
@@ -131,3 +131,4 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
 </script>
 
 {% endblock %}
+
