--- a/templates/graficos.html
+++ b/templates/graficos.html
@@ -26,7 +26,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
 <div id="graficos-container">
 
     <!-- Gráfico 1 -->
-    <div class="grafico" id="grafico1" style="display: none;">
+    <div class="grafico" id="grafico1">
         <div class='tableauPlaceholder' id='viz1757367034143' style='position: relative'>
             <noscript>
                 <a href='#'>
@@ -51,7 +51,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
     </div>
 
     <!-- Gráfico 2 -->
-    <div class="grafico" id="grafico2" style="display: none;">
+    <div class="grafico" id="grafico2">
         <div class='tableauPlaceholder' id='viz1757367395808' style='position: relative'>
             <noscript>
                 <a href='#'>
@@ -76,7 +76,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
     </div>
 
     <!-- Gráfico 3 -->
-    <div class="grafico" id="grafico3" style="display: none;">
+    <div class="grafico" id="grafico3">
         <div class='tableauPlaceholder' id='viz1757367434316' style='position: relative'>
             <noscript>
                 <a href='#'>
@@ -131,5 +131,6 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
 </script>
 
 {% endblock %}
+
 
 
