--- a/templates/graficos.html
+++ b/templates/graficos.html
@@ -36,7 +36,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
                 <param name='embed_code_version' value='3'/>
                 <param name='site_root' value=''/>
                 <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico1'/>
-                <param name='tabs' value='yes'/>
+                <param name='tabs' value='no'/>
                 <param name='toolbar' value='yes'/>
                 <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico1/1.png'/>
                 <param name='animate_transition' value='yes'/>
@@ -68,7 +68,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
                 <param name='embed_code_version' value='3'/>
                 <param name='site_root' value=''/>
                 <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico2'/>
-                <param name='tabs' value='yes'/>
+                <param name='tabs' value='no'/>
                 <param name='toolbar' value='yes'/>
                 <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico2/1.png'/>
                 <param name='animate_transition' value='yes'/>
@@ -100,7 +100,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
                 <param name='embed_code_version' value='3'/>
                 <param name='site_root' value=''/>
                 <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico3'/>
-                <param name='tabs' value='yes'/>
+                <param name='tabs' value='no'/>
                 <param name='toolbar' value='yes'/>
                 <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico3/1.png'/>
                 <param name='animate_transition' value='yes'/>
@@ -132,7 +132,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
                 <param name='embed_code_version' value='3'/>
                 <param name='site_root' value=''/>
                 <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico4'/>
-                <param name='tabs' value='yes'/>
+                <param name='tabs' value='no'/>
                 <param name='toolbar' value='yes'/>
                 <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico4/1.png'/>
                 <param name='animate_transition' value='yes'/>
@@ -164,7 +164,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
                 <param name='embed_code_version' value='3'/>
                 <param name='site_root' value=''/>
                 <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico5'/>
-                <param name='tabs' value='yes'/>
+                <param name='tabs' value='no'/>
                 <param name='toolbar' value='yes'/>
                 <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico5/1.png'/>
                 <param name='animate_transition' value='yes'/>
@@ -196,7 +196,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
                 <param name='embed_code_version' value='3'/>
                 <param name='site_root' value=''/>
                 <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico6'/>
-                <param name='tabs' value='yes'/>
+                <param name='tabs' value='no'/>
                 <param name='toolbar' value='yes'/>
                 <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico6/1.png'/>
                 <param name='animate_transition' value='yes'/>
@@ -228,7 +228,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
                 <param name='embed_code_version' value='3'/>
                 <param name='site_root' value=''/>
                 <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico7'/>
-                <param name='tabs' value='yes'/>
+                <param name='tabs' value='no'/>
                 <param name='toolbar' value='yes'/>
                 <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico7/1.png'/>
                 <param name='animate_transition' value='yes'/>
@@ -260,7 +260,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
                 <param name='embed_code_version' value='3'/>
                 <param name='site_root' value=''/>
                 <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico8'/>
-                <param name='tabs' value='yes'/>
+                <param name='tabs' value='no'/>
                 <param name='toolbar' value='yes'/>
                 <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico8/1.png'/>
                 <param name='animate_transition' value='yes'/>
@@ -292,7 +292,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
                 <param name='embed_code_version' value='3'/>
                 <param name='site_root' value=''/>
                 <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico9'/>
-                <param name='tabs' value='yes'/>
+                <param name='tabs' value='no'/>
                 <param name='toolbar' value='yes'/>
                 <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico9/1.png'/>
                 <param name='animate_transition' value='yes'/>
@@ -324,7 +324,7 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
                 <param name='embed_code_version' value='3'/>
                 <param name='site_root' value=''/>
                 <param name='name' value='SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico10'/>
-                <param name='tabs' value='yes'/>
+                <param name='tabs' value='no'/>
                 <param name='toolbar' value='yes'/>
                 <param name='static_image' value='https://public.tableau.com/static/images/Si/SistemadeMonitoreoyAnalisisdelaCalidaddelAgua/grafico10/1.png'/>
                 <param name='animate_transition' value='yes'/>
@@ -364,3 +364,4 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
     document.getElementById('grafico1').style.display = 'block';
 </script>
 {% endblock %}
+
