--- a/templates/mision_vision.html
+++ b/templates/mision_vision.html
@@ -22,15 +22,16 @@
 
 <div>
     <h4>Analista de Datos y Diseñadora de Visualizaciones</h4>
-    <p><strong>Pedraza López Melisa Guadalupe:</strong> Responsable de la limpieza, preprocesamiento y selección de datos abiertos, así como del diseño y creación de gráficos interactivos en Tableau para la visualización de resultados.</p>
+    <p>Responsable de la limpieza, preprocesamiento y selección de datos abiertos, así como del diseño y creación de gráficos interactivos en Tableau para la visualización de resultados.</p>
 </div>
 
 <div>
     <h4>Especialista en Tecnología y Herramientas</h4>
-    <p><strong>Peralta Saavedra Joel Adán:</strong> Proporciona conocimientos técnicos sobre las herramientas y tecnologías utilizadas, como Flask, HTML, CSS y Tableau, asegurando su correcta implementación y funcionamiento en el proyecto.</p>
+    <p>Proporciona conocimientos técnicos sobre las herramientas y tecnologías utilizadas, como Flask, HTML, CSS y Tableau, asegurando su correcta implementación y funcionamiento en el proyecto.</p>
 </div>
 
 <img src="/static/images/org.png" alt="Organigrama del proyecto"/>
 
 
 {% endblock %}
+
