--- a/templates/mision_vision.html
+++ b/templates/mision_vision.html
@@ -12,7 +12,7 @@
 
 <div>
     <h4>Director General</h4>
-    <p><strong>García Gutiérrez Wendy Sarahi:</strong> Responsable de coordinar las actividades del equipo, desarrollar la documentación teórica y justificar el uso de las bases de datos y tecnologías empleadas en el proyecto.</p>
+    <p>Responsable de coordinar las actividades del equipo, desarrollar la documentación teórica y justificar el uso de las bases de datos y tecnologías empleadas en el proyecto.</p>
 </div>
 
 <div>
@@ -22,7 +22,7 @@
 
 <div>
     <h4>Analista de Datos y Diseñadora de Visualizaciones</h4>
-    <p>Responsable de la limpieza, preprocesamiento y selección de datos abiertos, así como del diseño y creación de gráficos interactivos en Tableau para la visualización de resultados.</p>
+    <p><strong>García Gutiérrez Wendy Sarahi:</strong>Responsable de la limpieza, preprocesamiento y selección de datos abiertos, así como del diseño y creación de gráficos interactivos en Tableau para la visualización de resultados.</p>
 </div>
 
 <div>
@@ -34,4 +34,5 @@
 
 
 {% endblock %}
+
 
