--- a/templates/graficos.html
+++ b/templates/graficos.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Gráficos Interactivos</h1>
+<h1>Dashboards</h1>
 
 <!-- Descripción de la pestaña -->
 <p>En esta pestaña, se visualizarán gráficos interactivos basados en los datos abiertos seleccionados sobre los indicadores de la calidad del agua.</p>
@@ -364,4 +364,5 @@ Los usuarios podrán explorar las tendencias, identificar áreas de oportunidad 
     document.getElementById('grafico1').style.display = 'block';
 </script>
 {% endblock %}
+
 
