--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <a href="{{ url_for('home') }}">Inicio</a>
         <a href="{{ url_for('mision_vision') }}">Descripción</a>
         <a href="{{ url_for('cargar_datos') }}">Cargar Datos</a>
-        <a href="{{ url_for('graficos') }}">Gráficos</a>
+        <a href="{{ url_for('graficos') }}">Dashboard</a>
     </nav>
 
     <main>
@@ -37,3 +37,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
